# english-homework-helper

./: .gitignore  LICENSE  README.md  cli.py  console.py  console_api.py  constants.py  globalvars.py  justfile  main.py  pyproject.toml  requirements.txt  tasks.py  tasks_api.py  telegram_bot.py  tui.py
local/: ai_clients.py.example  config.json.example  credentials.py.example  telegram_bot_token.py.example
models/: ai_client.py  credentials.py  homework_record.py  homework_status.py
models/api/: token.py  user_info.py
models/context/: context.py  messenger.py
src/ehh/: __init__.py  __main__.py  cli_api.py  cli_browser.py  configurator.py  globalvars.py  tasks_api.py  tasks_browser.py  telegram_bot.py  tui.py
src/ehh/models/: ai_client.py  credentials.py  homework_record.py  homework_status.py
src/ehh/models/api/: token.py
src/ehh/utils/: config.py  constants.py  convert.py  feature_flags.py  fs.py  logging.py  prompt.py  webdriver.py
src/ehh/utils/api/: constants.py
src/ehh/utils/browser/: constants.py
src/ehh/utils/context/: base.py  context.py  messenger.py
src/ehh/utils/context/impl/: api_context.py  browser_context.py  console_messenger.py  telegram_messenger.py  textual_messenger.py
utils/: config.py  constants.py  convert.py  crypto.py  exceptions.py  fs.py  logging.py  prompt.py  webdriver.py
utils/api/: constants.py
utils/context/: context.py  messenger.py
